--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,21 @@ env:
   DEVELOPER_DIR: /Applications/Xcode_13.3.app
 
 jobs:
-  build:
+  build-generator:
+    runs-on: macos-12
+    steps:
+      - uses: actions/checkout@v2
+      - name: "NeedleGeneratorTests"
+        run: cd Generator && swift test -Xswiftc -DDEBUG
+      - name: "NeedleGeneratorBinary"
+        run: cd Generator && swift build -c release
+
+  build-foundation:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
       - name: "NeedleFoundationTests"
         run: xcodebuild test -project NeedleFoundation.xcodeproj -scheme NeedleFoundation -destination 'platform=iOS Simulator,OS=15.4,name=iPhone 11'
-      - name: "NeedleGeneratorTests"
-        run: cd Generator && swift test -Xswiftc -DDEBUG
-      - name: "NeedleGeneratorBinary"
-        run: cd Generator && swift build -c release
       - name: "NeedleSampleMVCApp"
         run: xcodebuild build -project Sample/MVC/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToe -destination 'platform=iOS Simulator,OS=15.4,name=iPhone 11'
       - name: "NeedleSampleMVCTests"
