--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,18 @@ name: MacOS application
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12.5.1.app
+  DEVELOPER_DIR: /Applications/Xcode_13.3.app
 
 jobs:
   build:
-    runs-on: macos-11
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
       - name: "NeedleFoundationTests"
