--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches:
       - master
-
+  workflow_dispatch:
+  
 env:
   DEVELOPER_DIR: /Applications/Xcode_13.2.1.app
 
