--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         os: [macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: fwal/setup-swift@1
+      - uses: fwal/setup-swift@v1
         with:
           swift-version: "5.6"
       - uses: actions/checkout@v2
