--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        xcode: ["12.5.1", "13.2.1"]
+        xcode: ["13.2.1"]
     steps:
       - uses: actions/checkout@v2
       - name: Set Xcode ${{ matrix.xcode }}
