--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,27 +6,40 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  DEVELOPER_DIR: /Applications/Xcode_12.5.1.app
-
 jobs:
-  build:
-    runs-on: macos-11
+  build-generator:
+    strategy:
+      matrix:
+        swift: ["5.4", "5.6"]
+    runs-on: macos-latest
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v2
-      - name: "NeedleFoundationTests"
-        run: xcodebuild test -project NeedleFoundation.xcodeproj -scheme NeedleFoundation -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
       - name: "NeedleGeneratorTests"
         run: cd Generator && swift test -Xswiftc -DDEBUG
       - name: "NeedleGeneratorBinary"
         run: cd Generator && swift build -c release
+
+  build-foundation:
+    runs-on: macos-11
+    strategy:
+      matrix:
+        xcode: ["12.5.1", "13.2.1"]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set Xcode ${{ matrix.xcode }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: "NeedleFoundationTests"
+        run: xcodebuild test -project NeedleFoundation.xcodeproj -scheme NeedleFoundation -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
       - name: "NeedleSampleMVCApp"
-        run: xcodebuild build -project Sample/MVC/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToe -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
+        run: xcodebuild build -project Sample/MVC/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToe -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
       - name: "NeedleSampleMVCTests"
-        run: xcodebuild test -project Sample/MVC/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToeTests -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
+        run: xcodebuild test -project Sample/MVC/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToeTests -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
       - name: "NeedleSamplePluginizedApp"
-        run: xcodebuild build -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToe -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
+        run: xcodebuild build -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToe -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
       - name: "NeedleSamplePluginizedScoreSheetTests"
-        run: xcodebuild test -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme ScoreSheetTests -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
+        run: xcodebuild test -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme ScoreSheetTests -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
       - name: "NeedleSamplePluginizedTicTacToeCoreTests"
-        run: xcodebuild test -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToeCoreTests -destination 'platform=iOS Simulator,OS=14.5,name=iPhone 11'
+        run: xcodebuild test -project Sample/Pluginized/TicTacToe/TicTacToe.xcodeproj -scheme TicTacToeCoreTests -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 11'
