--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build-generator:
     strategy:
       matrix:
-        swift: ["5.4", "5.6"]
+        swift: ["5.6"]
     runs-on: macos-latest
     steps:
       - uses: fwal/setup-swift@v1
@@ -26,7 +26,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        xcode: ["12.5.1", "13.2.1"]
+        xcode: ["13.2.1"]
     steps:
       - uses: actions/checkout@v2
       - name: Set Xcode ${{ matrix.xcode }}
