--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         swift: ["5.6"]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: fwal/setup-swift@v1
         with:
